--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <header class="main-header">
     <nav class="main-navigation">
       <a class="main-header-logo">
-        <img src="img" alt="Логотип Глейси" width="100" height="100">
+        <img src="img/logo.svg" alt="Логотип Глейси" width="150" height="150">
       </a>
       <ul class="site-navigation">
         <li class="catalog-dropdown">Каталог
@@ -74,18 +74,17 @@
 <section class="advantages">
   <h2 class="visually-hidden">Преимущества</h2>
   <p class="specification-shop">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</p>
-  <div class="advantages-item">
+<div class="flex-conteiner-excellence">
     <ul class="excellence-lead">
-    <li><img src="img/ice-cream.svg" alt="Иконка мороженого"><!--cюда нужно добвл иконки или это через CSS делаеися?-->Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
-    <li><img src="img/eco.svg" alt="Иконка эко-продукта"><!--cюда нужно добвл иконки или это через CSS делаеися?-->Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального,экологически чистого сырья.</li>
+    <li><img src="img/cow.svg" alt="Иконка мороженого"><!--cюда нужно добвл иконки или это через CSS делается?-->Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
+    <li><img src="img/eco.svg" alt="Иконка эко-продукта"><!--cюда нужно добвл иконки или это через CSS делается?-->Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального,экологически чистого сырья.</li>
   </ul>
-  </div>
-  <div class="advantages-item">
+
    <ul class="excellence-lead">
-    <li>Закупка ингредиентов  производится только у проверенныхфермерских хозяйств и компаний, с которыми нас связываетдолговременное сотрудничество.</li>
-    <li>Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
+    <li><img src="img/cow.svg" alt="Иконка корова"><!--cюда нужно добвл иконки или это через CSS делается?-->Закупка ингредиентов  производится только у проверенныхфермерских хозяйств и компаний, с которыми нас связываетдолговременное сотрудничество.</li>
+    <li><img src="img/thermometer.svg" alt="Иконка термометр"><!--cюда нужно добвл иконки или это через CSS делается?-->Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
   </ul>
-  </div>
+</div>
 </section>
 <div class="blog-newsletter"> <!--добавила див,чтоб был контейнер для двух блоков. не помогло пока-->
 <section class="blog">
@@ -142,16 +141,18 @@
   <div><a class="social-button" href="#"><img src="img/vk.svg"></a></div>
 </div>
 <div class="footer-info">
-<ul>
+<ul class="flex-conteiner-footer-info">
   <li><a class="info" href="#">Для поставщиков</a></li>
   <li><a class="info" href="#">О производстве</a></li>
+</ul>
+  <ul class="flex-conteiner-footer-info">
   <li><a class="info" href="#">Наши документы</a></li>
   <li><a class="info" href="#">Экологические стандарты</a></li>
 </ul>
 </div>
 <div class="footer-copyright">
 <p>Сделано в HTML Academy</p>
-<a class="htmlacademy-button" href="https://htmlacademy.ru">HTML Academy</a>
+<a class="htmlacademy-button" href="https://htmlacademy.ru"><img src="img/logo-htmlacademy.svg" alt="логотип htmlacademy" width="108" height="39"></a>
 </div>
 </footer>
 </body>
