--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+  <!--<div class="main-conteiner"> -->
   <header class="main-header">
     <nav class="main-navigation">
       <a class="main-header-logo">
@@ -13,7 +14,7 @@
       </a>
       <ul class="site-navigation">
         <li class="catalog-dropdown">Каталог
-          <ul>
+          <ul class="catalog-dropdown-items">
             <li><a href="сatalog.html/brand_new">Новинки</a></li>
             <li><a href="сatalog.html/sliv">Сливочное</a></li>
             <li><a href="сatalog.html/sher">Шербеты</a></li>
@@ -69,24 +70,23 @@
   </ul>
 </nav>
 </header>
-<main class="container">
+<main class="container"> <!-- по нему задаем ширину конткйнера или по стр 9?-->
 <h1 class="visually-hidden">Главная страница</h1>
 <section class="advantages">
   <h2 class="visually-hidden">Преимущества</h2>
   <p class="specification-shop">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</p>
-<div class="flex-conteiner-excellence">
+  <div class="excellence">
     <ul class="excellence-lead">
-    <li><img src="img/cow.svg" alt="Иконка мороженого"><!--cюда нужно добвл иконки или это через CSS делается?-->Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
-    <li><img src="img/eco.svg" alt="Иконка эко-продукта"><!--cюда нужно добвл иконки или это через CSS делается?-->Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального,экологически чистого сырья.</li>
-  </ul>
-
-   <ul class="excellence-lead">
-    <li><img src="img/cow.svg" alt="Иконка корова"><!--cюда нужно добвл иконки или это через CSS делается?-->Закупка ингредиентов  производится только у проверенныхфермерских хозяйств и компаний, с которыми нас связываетдолговременное сотрудничество.</li>
-    <li><img src="img/thermometer.svg" alt="Иконка термометр"><!--cюда нужно добвл иконки или это через CSS делается?-->Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
-  </ul>
-</div>
+      <li><img src="img/ice-cream.svg" alt="Иконка мороженого">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
+      <li><img src="img/eco.svg" alt="Иконка эко-продукта">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального,экологически чистого сырья.</li>
+    </ul>
+    <ul class="excellence-lead">
+      <li><img src="img/cow.svg" alt="Иконка корова">Закупка ингредиентов  производится только у проверенныхфермерских хозяйств и компаний, с которыми нас связываетдолговременное сотрудничество.</li>
+      <li><img src="img/thermometer.svg" alt="Иконка термометр">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
+    </ul>
+  </div>
 </section>
-<div class="blog-newsletter"> <!--добавила див,чтоб был контейнер для двух блоков. не помогло пока-->
+<div class="blog-newsletter">
 <section class="blog">
   <h3>Новое в нашем блоге</h3>
   <a href="blog.html">10 способов сервировки фруктовых шербетов к столу
@@ -101,6 +101,8 @@
   </form>
 </section>
 </div>
+</main>
+<!--</div>-->
 <figure class="map">
 <p><img src="img/map.svg" alt="Карта с адресом"></p>
 <div class="store-address" method="get" action="https:_.ru">
@@ -135,17 +137,17 @@
 </main>
 <footer class="main-footer">
 <div class="footer-social">
-  <div><a class="social-button" href="#"><img src="img/twitter.svg"></a></div>
-  <div><a class="social-button" href="#"><img src="img/instagram.svg"></a></div>
-  <div><a class="social-button" href="#"><img src="img/fb.svg"></a></div>
-  <div><a class="social-button" href="#"><img src="img/vk.svg"></a></div>
+<div><a class="social-button" href="#"><img src="img/twitter.svg"></a></div>
+<div><a class="social-button" href="#"><img src="img/instagram.svg"></a></div>
+<div><a class="social-button" href="#"><img src="img/fb.svg"></a></div>
+<div><a class="social-button" href="#"><img src="img/vk.svg"></a></div>
 </div>
 <div class="footer-info">
 <ul class="flex-conteiner-footer-info">
   <li><a class="info" href="#">Для поставщиков</a></li>
   <li><a class="info" href="#">О производстве</a></li>
 </ul>
-  <ul class="flex-conteiner-footer-info">
+<ul class="flex-conteiner-footer-info">
   <li><a class="info" href="#">Наши документы</a></li>
   <li><a class="info" href="#">Экологические стандарты</a></li>
 </ul>
