--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-  <!--<div class="main-conteiner"> -->
+  <div class="container"> 
   <header class="main-header">
     <nav class="main-navigation">
       <a class="main-header-logo">
@@ -70,21 +70,18 @@
   </ul>
 </nav>
 </header>
-<main class="container"> <!-- по нему задаем ширину конткйнера или по стр 9?-->
+</div>
+<main class="container"> <!-- по нему задаем ширину контeйнера или по стр 9?-->
 <h1 class="visually-hidden">Главная страница</h1>
 <section class="advantages">
   <h2 class="visually-hidden">Преимущества</h2>
   <p class="specification-shop">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</p>
-  <div class="excellence">
-    <ul class="excellence-lead">
+     <ul class="excellence">
       <li><img src="img/ice-cream.svg" alt="Иконка мороженого">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
       <li><img src="img/eco.svg" alt="Иконка эко-продукта">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального,экологически чистого сырья.</li>
-    </ul>
-    <ul class="excellence-lead">
       <li><img src="img/cow.svg" alt="Иконка корова">Закупка ингредиентов  производится только у проверенныхфермерских хозяйств и компаний, с которыми нас связываетдолговременное сотрудничество.</li>
       <li><img src="img/thermometer.svg" alt="Иконка термометр">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
     </ul>
-  </div>
 </section>
 <div class="blog-newsletter">
 <section class="blog">
@@ -135,6 +132,7 @@
 <input type="button" id="cancel_edit" value="Закрыть"></input>
 </div>
 </main>
+<div class="container"> 
 <footer class="main-footer">
 <div class="footer-social">
 <div><a class="social-button" href="#"><img src="img/twitter.svg"></a></div>
@@ -157,5 +155,6 @@
 <a class="htmlacademy-button" href="https://htmlacademy.ru"><img src="img/logo-htmlacademy.svg" alt="логотип htmlacademy" width="108" height="39"></a>
 </div>
 </footer>
+</div>
 </body>
 </html>
