--- a/index.html
+++ b/index.html
@@ -6,82 +6,82 @@
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-  <div class="container"> 
-  <header class="main-header">
-    <nav class="main-navigation">
-      <a class="main-header-logo">
-        <img src="img/logo.svg" alt="Логотип Глейси" width="150" height="150">
-      </a>
-      <ul class="site-navigation">
-        <li class="catalog-dropdown">Каталог
-          <ul class="catalog-dropdown-items">
-            <li><a href="сatalog.html/brand_new">Новинки</a></li>
-            <li><a href="сatalog.html/sliv">Сливочное</a></li>
-            <li><a href="сatalog.html/sher">Шербеты</a></li>
-            <li><a href="сatalog.html/fru">Фруктовый лед</a></li>
-            <li><a href="сatalog.html/mel">Мелорин</a></li>
-          </ul>
-        </li>
-        <li><a href="delivery">Доставка и оплата</a></li>
-        <li><a href="about-us">О компании</a></li>
-      </ul>
-      <ul class="user-navigation">
-        <li>
-          <a href="button">Поиск</a>
-          <form class="search-form" method="get" action="https:_.ru">
+  <div class="container">
+    <header class="main-header">
+      <nav class="main-navigation">
+        <a class="main-header-logo">
+          <img src="img/logo.svg" alt="Логотип Глейси" width="150" height="150">
+        </a>
+        <ul class="site-navigation">
+          <li class="catalog-dropdown">Каталог
+            <ul class="catalog-dropdown-items">
+              <li><a href="сatalog.html/brand_new">Новинки</a></li>
+              <li><a href="сatalog.html/sliv">Сливочное</a></li>
+              <li><a href="сatalog.html/sher">Шербеты</a></li>
+              <li><a href="сatalog.html/fru">Фруктовый лед</a></li>
+              <li><a href="сatalog.html/mel">Мелорин</a></li>
+            </ul>
+          </li>
+          <li><a href="delivery">Доставка и оплата</a></li>
+          <li><a href="about-us">О компании</a></li>
+        </ul>
+        <ul class="user-navigation">
+          <li>
+            <a href="button">Поиск</a>
+            <form class="search-form" method="get" action="https:_.ru">
+              <p>
+                <label for="search-input" hidden="">Что ищем?</label>
+                <input type="text" id="search-input" placeholder="Что ищем?">
+              </p>
+            </form>
+          </li>
+          <li><a class="login-link" href="login.html">Вход</a>
+          <form class="login-form" method="get" action="https:_.ru">
             <p>
-              <label for="search-input" hidden="">Что ищем?</label>
-              <input type="text" id="search-input" placeholder="Что ищем?">
+              <label for="login-user" hidden="">Электронная почта</label>
+              <input type="text" id="login-user" name="login" placeholder="Электронная почта">
             </p>
+            <p>
+              <label for="user-password" hidden="">Пароль</label>
+              <input id="user-password" type="password" name="password" placeholder="Пароль">
+            </p>
+            <button type="submit">Войти</button>
+            <a class="login-form-link" href="#">Забыли пароль?</a>
+            <a class="login-form-link" href="#">Новая регистрация</a>
           </form>
         </li>
-        <li><a class="login-link" href="login.html">Вход</a>
-        <form class="login-form" method="get" action="https:_.ru">
-          <p>
-            <label for="login-user" hidden="">Электронная почта</label>
-            <input type="text" id="login-user" name="login" placeholder="Электронная почта">
-          </p>
-          <p>
-            <label for="user-password" hidden="">Пароль</label>
-            <input id="user-password" type="password" name="password" placeholder="Пароль">
-          </p>
-          <button type="submit">Войти</button>
-          <a class="login-form-link" href="#">Забыли пароль?</a>
-          <a class="login-form-link" href="#">Новая регистрация</a>
-        </form>
+        <li><a href="button">Корзинa</a>
+        <div class="basket-form">
+          <table>
+            <tr>
+              <td>Пломбир с апельсиновым джемом</td>
+              <td>1.5 кг</td>
+              <td>300 р.</td>
+            </tr>
+            <tr>
+              <td>Клубничный пломбир с присыпкой из белого шоколада</td>
+              <td>1.5 кг</td>
+              <td>450 р.</td>
+            </tr>
+          </table>
+          <a href="Checkout">Оформить заказ</a>
+        </div>
       </li>
-      <li><a href="button">Корзинa</a>
-      <div class="basket-form">
-        <table>
-          <tr>
-            <td>Пломбир с апельсиновым джемом</td>
-            <td>1.5 кг</td>
-            <td>300 р.</td>
-          </tr>
-          <tr>
-            <td>Клубничный пломбир с присыпкой из белого шоколада</td>
-            <td>1.5 кг</td>
-            <td>450 р.</td>
-          </tr>
-        </table>
-        <a href="Checkout">Оформить заказ</a>
-      </div>
-    </li>
-  </ul>
-</nav>
+    </ul>
+  </nav>
 </header>
 </div>
 <main class="container"> <!-- по нему задаем ширину контeйнера или по стр 9?-->
 <h1 class="visually-hidden">Главная страница</h1>
 <section class="advantages">
-  <h2 class="visually-hidden">Преимущества</h2>
-  <p class="specification-shop">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</p>
-     <ul class="excellence">
-      <li><img src="img/ice-cream.svg" alt="Иконка мороженого">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
-      <li><img src="img/eco.svg" alt="Иконка эко-продукта">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального,экологически чистого сырья.</li>
-      <li><img src="img/cow.svg" alt="Иконка корова">Закупка ингредиентов  производится только у проверенныхфермерских хозяйств и компаний, с которыми нас связываетдолговременное сотрудничество.</li>
-      <li><img src="img/thermometer.svg" alt="Иконка термометр">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
-    </ul>
+<h2 class="visually-hidden">Преимущества</h2>
+<p class="specification-shop">Магазин Глэйси — это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</p>
+<ul class="excellence">
+  <li><img src="img/ice-cream.svg" alt="Иконка мороженого">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
+  <li><img src="img/eco.svg" alt="Иконка эко-продукта">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального,экологически чистого сырья.</li>
+  <li><img src="img/cow.svg" alt="Иконка корова">Закупка ингредиентов  производится только у проверенныхфермерских хозяйств и компаний, с которыми нас связываетдолговременное сотрудничество.</li>
+  <li><img src="img/thermometer.svg" alt="Иконка термометр">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
+</ul>
 </section>
 <div class="blog-newsletter">
 <section class="blog">
@@ -99,40 +99,42 @@
 </section>
 </div>
 </main>
-<!--</div>-->
+
 <figure class="map">
 <p><img src="img/map.svg" alt="Карта с адресом"></p>
+<div class="container-address">
 <div class="store-address" method="get" action="https:_.ru">
-  <p class="contact-description">Адрес главного офиса и онлайн магазина</p>
-  <p>ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
-  <p class="contact-description">для заказов по телефону:</p>
-  <p>8 812 450-25-25</p>
-  <p class="contact-description">(с 10 до 20 часов)</p>
-  <a class="feedback-form" href="#">Форма обратной связи</a>
+<p class="contact-description">Адрес главного офиса и онлайн магазина</p>
+<p>ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
+<p class="contact-description">для заказов по телефону:</p>
+<p>8 812 450-25-25</p>
+<p class="contact-description">(с 10 до 20 часов)</p>
+<a class="feedback-form" href="#">Форма обратной связи</a>
+</div>
 </div>
 </figure>
 <div class="contact-form">
 <form class="search-form" method="get" action="https:_.ru">
-  <h3>Мы обязательно вам ответим!</h3>
-  <p>
-    <label for="input" hidden="user-name">Как вас зовут?</label>
-    <input type="text" id="user-name" placeholder="Как вас зовут?">
-  </p>
-  <p>
-    <label for="input" hidden="user-mail">Ваша почта для ответа?</label>
-    <input type="text" id="user-mail" placeholder="Ваша почта для ответа?">
-  </p>
-  <p>
-    <label for="input" hidden="user-message">Напишите что-нибудь</label>
-    <textarea type="text" id="user-message" rows="2" placeholder="Напишите что-нибудь..."
-    required></textarea>
-  </p>
-  <button type="submit">Отправить</button>
+<h3>Мы обязательно вам ответим!</h3>
+<p>
+  <label for="input" hidden="user-name">Как вас зовут?</label>
+  <input type="text" id="user-name" placeholder="Как вас зовут?">
+</p>
+<p>
+  <label for="input" hidden="user-mail">Ваша почта для ответа?</label>
+  <input type="text" id="user-mail" placeholder="Ваша почта для ответа?">
+</p>
+<p>
+  <label for="input" hidden="user-message">Напишите что-нибудь</label>
+  <textarea type="text" id="user-message" rows="2" placeholder="Напишите что-нибудь..."
+  required></textarea>
+</p>
+<button type="submit">Отправить</button>
 </form>
 <input type="button" id="cancel_edit" value="Закрыть"></input>
 </div>
 </main>
-<div class="container"> 
+<div class="container">
 <footer class="main-footer">
 <div class="footer-social">
 <div><a class="social-button" href="#"><img src="img/twitter.svg"></a></div>
